Добавил ручку получения всех пользователей, убрал лишнее
